--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h1 class="title">2023 신년계획</h1> 
     <p class="msg">천천히 하나씩 이루자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1-t5 center">정보처리기사 자격증 취득</div> <!-- class는 이름을 지어준다-->
+        <div class="bucket img1-t5 center done ">정보처리기사 자격증 취득</div> <!-- class는 이름을 지어준다-->
         <div class="bucket img2-t5 center">해외여행 1회 이상 다녀오기</div>
         <div class="bucket img3-t5 center">기타 완곡 완주하기</div>
         <div class="bucket img4-t5 center">60kg 유지하기(근육증가는 상관없음)</div>
